# alliance-protocol

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: Basic.yml
contracts/alliance-hub/: Cargo.toml
contracts/alliance-hub/examples/: schema.rs
contracts/alliance-hub/schema/: alliance-hub.json
contracts/alliance-hub/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_pending_rewards.json  response_to_whitelisted_assets.json
contracts/alliance-hub/src/: contract.rs  error.rs  lib.rs  models.rs  query.rs  state.rs  token_factory.rs
contracts/alliance-hub/src/tests/: alliance.rs  assets.rs  helpers.rs  instantiate.rs  mod.rs  rewards.rs  stake_unstake.rs
contracts/alliance-lp-hub/: Cargo.toml
contracts/alliance-lp-hub/examples/: schema.rs
contracts/alliance-lp-hub/schema/: alliance-lp-hub.json
contracts/alliance-lp-hub/schema/raw/: execute.json  instantiate.json  query.json  response_to_address_pending_rewards.json  response_to_all_pending_rewards.json  response_to_all_staked_balances.json  response_to_alliance_rewards_distribution.json  response_to_config.json  response_to_contract_balances.json  response_to_pending_rewards.json  response_to_staked_balance.json  response_to_validators.json  response_to_whitelisted_assets.json
contracts/alliance-lp-hub/src/: astro_models.rs  contract.rs  helpers.rs  lib.rs  models.rs  query.rs  state.rs
contracts/alliance-lp-hub/src/tests/: alliance.rs  helpers.rs  instantiate.rs  mock_querier.rs  mod.rs  modify_asset.rs  query_rewards.rs  query_stake.rs  rewards.rs  stake_unstake.rs
contracts/alliance-oracle/: Cargo.toml
contracts/alliance-oracle/examples/: schema.rs
contracts/alliance-oracle/schema/: alliance-oracle.json
contracts/alliance-oracle/schema/raw/: execute.json  instantiate.json  query.json  response_to_query_chain_info.json  response_to_query_chains_info.json  response_to_query_config.json  response_to_query_emissions_distributions.json  response_to_query_luna_info.json
contracts/alliance-oracle/src/: contract.rs  lib.rs  state.rs  utils.rs
contracts/alliance-oracle/src/tests/: mod.rs  test_utils.rs
contracts/cw-alliance-oracle/: Cargo.toml
scripts/: deploy-hub.ts  deploy-oracle.ts  execute-alliance-delegate-asset.ts  execute-contract-migrate.ts  execute-proposal-whitelist-assets.ts  package-lock.json  package.json  register-feeshare.ts
scripts/lp-hub/: claim-rewards.ts  create-alliance.ts  delegate-alliance.ts  instantiate.ts  migrate.ts  modify-pairs.ts  stake.ts  store-code.ts  unstake.ts  update-rewards.ts
scripts/protocol/: delegate-alliance-asset.ts  feeshare.ts  migrate-contracts.ts  store-code.ts  whitelist.ts
