[workspace]
members = [
    "contracts/*",
    "packages/*",
]
exclude = [
]

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[workspace.dependencies]
cosmwasm-std = "1.1.10"
cosmwasm-storage = "1.1.10"
cosmwasm-schema = "1.1.10"
cw-storage-plus = "1.1.0"
cw-asset = "2.4.0"
schemars = "0.8.12"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
terra-proto-rs = { version = "3.0.1", default-features = false}
thiserror = { version = "1.0.38" }
cw2 = "1.0.1"
alliance-protocol = { path = "./packages/alliance-protocol" }
alliance-oracle = { path = "./packages/alliance-oracle" }